[gd_scene load_steps=8 format=3 uid="uid://bdxdojlrm5uuk"]

[ext_resource type="Script" path="res://MultiPlayerShooterPlayerRB.gd" id="1_rmf1d"]
[ext_resource type="PackedScene" uid="uid://d4m6556x1e6c" path="res://Bullet.tscn" id="2_6txfk"]
[ext_resource type="Texture2D" uid="uid://crgm4pjh4ywu" path="res://triangle.svg" id="3_h4c46"]

[sub_resource type="PhysicsMaterial" id="PhysicsMaterial_oh064"]
absorbent = true

[sub_resource type="CircleShape2D" id="CircleShape2D_508ad"]
custom_solver_bias = 1.0

[sub_resource type="SceneReplicationConfig" id="SceneReplicationConfig_8ghht"]
properties/0/path = NodePath(".:position")
properties/0/spawn = true
properties/0/replication_mode = 1
properties/1/path = NodePath(".:rotation")
properties/1/spawn = true
properties/1/replication_mode = 1
properties/2/path = NodePath("Sprite2D:flip_h")
properties/2/spawn = true
properties/2/replication_mode = 1
properties/3/path = NodePath("Sprite2D:flip_v")
properties/3/spawn = true
properties/3/replication_mode = 1

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_c3yjv"]
radius = 3.91763
height = 8.39491

[node name="RigidBody2D" type="RigidBody2D" groups=["has_gravity", "player"]]
position = Vector2(1, -90)
mass = 4.0
physics_material_override = SubResource("PhysicsMaterial_oh064")
center_of_mass_mode = 1
center_of_mass = Vector2(2.08167e-16, 2.08167e-16)
script = ExtResource("1_rmf1d")
Bullet = ExtResource("2_6txfk")

[node name="RBFootNode" type="Node2D" parent="."]
position = Vector2(0, 90)

[node name="RBHeadNode" type="Node2D" parent="."]
position = Vector2(0, -92)

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(-2.08165e-12, 0)
scale = Vector2(7.12, 9.04)
shape = SubResource("CircleShape2D_508ad")

[node name="PlayerSynchronizer" type="MultiplayerSynchronizer" parent="."]
replication_config = SubResource("SceneReplicationConfig_8ghht")

[node name="Camera2D" type="Camera2D" parent="."]
zoom = Vector2(0.5, 0.5)

[node name="Label" type="Label" parent="."]
offset_left = -57.0
offset_top = -121.0
offset_right = -17.0
offset_bottom = -98.0
text = "Player"

[node name="Area2D" type="Area2D" parent="."]
modulate = Color(1, 0.823529, 0.231373, 0.741176)
self_modulate = Color(1, 1, 0.666667, 0.823529)
scale = Vector2(9.23046, -25.0151)

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
scale = Vector2(3, 1)
shape = SubResource("CapsuleShape2D_c3yjv")

[node name="Sprite2D" type="Sprite2D" parent="."]
position = Vector2(2.08165e-12, -10)
scale = Vector2(0.4, 0.4)
texture = ExtResource("3_h4c46")

[node name="HeadNode" type="Node2D" parent="Sprite2D"]
position = Vector2(-1, -244)

[node name="FootNode" type="Node2D" parent="Sprite2D"]
position = Vector2(2.08165e-12, 249)

[node name="RightNode" type="Node2D" parent="Sprite2D"]
position = Vector2(129, 2.08165e-12)

[node name="LeftNode" type="Node2D" parent="Sprite2D"]
position = Vector2(-133, 2.08165e-12)

[node name="CenterNode" type="Node2D" parent="Sprite2D"]

[connection signal="body_entered" from="Area2D" to="." method="_on_area_2d_body_entered"]
